Fix fallback ntp icons.

Had switched the text and background colors.

Bug: 737541
Change-Id: Id551bc29b80498862faa00506cdbfd452e0e6e22
Reviewed-on: https://chromium-review.googlesource.com/552118
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Elodie Banel <lod@chromium.org>
Cr-Commit-Position: refs/heads/master@{#482956}
Former-commit-id: f60e66bb2cedb8c603e5985499545b60d90af3f7